Proceso de guardado de experiencia y creditos de las notificaciones y nuevo logo

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,14 @@
 {
   "compilerOptions": {
-    "jsx": "react",
-    "moduleResolution": "node",
     "baseUrl": "./",
+    "checkJs": false,
+    "jsx": "react",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "strict": false,
+    "target": "es6",
     "paths": {
       "@/*": ["./src/*"],
     }
