--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "2.1.1",
     "firebase": "11.0.2",
     "framer-motion": "11.11.17",
+    "howler": "2.2.4",
     "moment": "2.30.1",
     "next": "15.0.1",
     "react": "19.0.0",
